--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
+<title>Module2 Solution</title>
 <style>
 
 /********** Base styles **********/
@@ -14,7 +14,7 @@ h1 {
   margin-bottom: 15px;
 }
 
-p {
+p {/*
   border: 1px solid black;
   background-color: #A52A2A;
   width: 90%;
@@ -23,6 +23,7 @@ p {
   margin-left: auto;
   font-family: Helvetica;
   color: white;
+  */
 }
 
 /* Simple Responsive Framework. */
